stories page title

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -20,6 +20,7 @@
         "stories": "Stories",
         "all": "All",
         "place-stories": "Place Stories",
+        "all-materials": "All site materials",
         "zoom": "To read in a large window",
         "edit": "To edit the story",
         "enter-story-name": "Story's title",
