--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -19,6 +19,7 @@
         "all": "הכל",
         "stories": "סיפורים",
         "place-stories": "סיפורי המקום",
+        "all-materials": "כל סוגי החומרים שבאתר",
         "zoom": "לקריאה בחלון גדול",
         "edit": "לעריכת הסיפור",
         "enter-story-name": "תן כותרת לסיפור",
