--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -326,6 +326,9 @@
         "advanced-options": "Advanced options",
         "advanced-options-off": "No advanced options",
         "advanced-options-on": "Enable advanced options",
+        "theme-options": "Theme options",
+        "theme-options-on": "Alternative theme",
+        "theme-options-off": "Default theme",
         "registered-only": "Only registered users may view this site",
         "please-login-if": "If you are registered, please login",
         "topics-file": "Topics file",
