--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -324,6 +324,9 @@
         "advanced-options": "אפשרויות מתקדמות",
         "advanced-options-off": "ללא אפשרויות מתקדמות",
         "advanced-options-on": "הצג אפשרויות מתקדמות",
+        "theme-options": "אפשרויות רקע",
+        "theme-options-on": "רקע חליפי",
+        "theme-options-off": "ברירת המחדל",
         "registered-only": "האתר פתוח למשתמשים רשומים בלבד",
         "please-login-if": "אם אתה משתמש רשום, אנא התחבר",
         "qrcode-name": "QR code file name (English + digits only)",
