--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -31,7 +31,7 @@
         "save": "שמור",
         "to-the-full-story": "לסיפור המלא",
         "associated-members": "חברים הקשורים לסיפור",
-        "associated-articles": "פריטים הקשורים לסיפור",
+        "associated-articles": "עצמים הקשורים לסיפור",
         "word-index": "חפש מילים בתוכן הסיפורים",
         "languages": "בחר שפה",
         "arabic": "ערבית",
@@ -208,9 +208,9 @@
         "nearest-yarzeit": "לפי יום השנה הקרוב"
     },
     "articles": {
-        "articles": "פריטים",
+        "articles": "עצמים",
         "filter": "הקלד את שם הפריט",
-        "filter-can-add": "הקלד את שם הפריט או שם של פריט חדש",
+        "filter-can-add": "הקלד את שם הפריט או שם של עצם חדש",
         "life-summary": "אודות ",
         "article-name": "שם הפריט",
         "save": "שמור את השינויים",
@@ -221,7 +221,7 @@
         "start-date": "תחילת התקופה",
         "end-date": "סוף התקופה",
         "period": "תקופה: ",
-        "new": "צור פריט חדש"
+        "new": "צור עצם חדש"
     },
     "quiz": {
         "filters": "מסננים",
@@ -287,8 +287,8 @@
         "create-new-app": "יצירת האתר שלי",
         "new-app-enabled": "אפשר יצירת אתר חדש",
         "new-app-disabled": "ללא יצירת אתר חדש",
-        "enable-articles-off": "ללא זיהוי פריטים",
-        "enable-articles-on": "אפשר זיהוי פריטים",
+        "enable-articles-off": "ללא זיהוי עצמים",
+        "enable-articles-on": "אפשר זיהוי עצמים",
         "enable-books-off": "ללא ספרים",
         "enable-books-on": "אפשר ספרים",
         "enable-member-of-the-day-off": "ללא חבר היום",
@@ -301,8 +301,8 @@
         "expose-gallery-on": "הצג כפתור גלריה",
         "short-bio-title-on": "כולל כותרת קורות חיים",
         "short-bio-title-off": "ללא כותרת קורות חיים",
-        "articles-in-menu-on": "פריטים בתפריט",
-        "articles-in-menu-off": "כפתור פריטים בחברים",
+        "articles-in-menu-on": "עצמים בתפריט",
+        "articles-in-menu-off": "כפתור עצמים בחברים",
         "gallery": "גלריה",
         "audio-enabled": "אפשר הקלטות",
         "audio-disabled": "ללא הקלטות",
@@ -419,7 +419,7 @@
         "search-member": "עם חברים...",
         "any-photo": "כל התמונות",
         "candidates": "מועמדים לצרוף מתוך התמונות",
-        "article-candidates": "פריטים מועמדים לצרוף מתוך התמונות",
+        "article-candidates": "עצמים מועמדים לצרוף מתוך התמונות",
         "delete": "מחק את התמונות שנבחרו",
         "rotate": "סובב את התמונות שנבחרו",
         "rotate-photo": "סובב את התמונה",
@@ -461,14 +461,14 @@
         "alphabetical-order": "סדר אלפביתי",
         "edit-face-location": "לעריכת מיקום וגודל המעגל, לחץ על הכפתור הימני של העכבר או גרור את שפת המעגל או את תוכו",
         "click-to-identify": "הקלק על פרצוף כדי לזהותו",
-        "click-to-identify-article": "הקלק על פריט כדי לזהותו",
+        "click-to-identify-article": "הקלק על עצם כדי לזהותו",
         "add-details": "הוסף פרטים",
         "view-map": "הצג את המפה",
         "hide-map": "הסתר את המפה",
         "out-of": "מתוך ",
         "to-see-more": "כדי לראות יותר תמונות הקטן אותן. כשתגדיל אותן מספרן לא יקטן.",
         "mark-people": "סמן פרצופים",
-        "mark-articles": "סמן פריטים",
+        "mark-articles": "סמן עצמים",
         "undo-last-change": "בטל את השינוי האחרון",
         "photo-detail": "דף פרטי התמונה",
         "create-qr-photo": "צור תמונה עם קוֹדָר",
@@ -588,7 +588,9 @@
         "create-segment-str": "צרו קטע חדש",
         "no-segment-selected": "טרם נבחר קטע",
         "expand": "הגדל",
-        "collapse": "הקטן"
+        "collapse": "הקטן",
+        "page": "עמוד",
+        "untitled": "ללא כותרת"
     },
     "terms": {
         "terms": "מונחים",
@@ -831,7 +833,7 @@
     "result8": "סרטים",
     "result9": "מסמכים",
     "result10": "הקלטות",
-    "result12": "פריטים",
+    "result12": "עצמים",
     "and": "ו",
     "name": "שם",
     "email": "דואר אלקטרוני",
