--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -590,7 +590,8 @@
         "expand": "הגדל",
         "collapse": "הקטן",
         "page": "עמוד",
-        "untitled": "ללא כותרת"
+        "untitled": "ללא כותרת",
+        "view-full-doc": "צפו במסמך המלא"
     },
     "terms": {
         "terms": "מונחים",
