--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -592,8 +592,8 @@
         "page": "עמוד",
         "untitled": "ללא כותרת",
         "view-full-doc": "צפו במסמך המלא",
-        "view-full-docs": "מסמכים שלמים",
-        "view-segments": "קטעי מסמכים"
+        "view-full-docs": "להצגת מסמכים שלמים",
+        "view-segments": "להצגת קטעי מסמכים"
     },
     "terms": {
         "terms": "מונחים",
