--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -837,6 +837,7 @@
     "result9": "מסמכים",
     "result10": "הקלטות",
     "result12": "עצמים",
+    "result14": "כתבות",
     "and": "ו",
     "name": "שם",
     "email": "דואר אלקטרוני",
