--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -838,6 +838,7 @@
     "result9": "Document",
     "result10": "Audio",
     "result12": "Articles",
+    "result14": "Document Segments",
     "change-cache": "just to cause different name",
     "and": " and ",
     "name": "Name",
