--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -581,19 +581,19 @@
         "old-to-new": "מסמכים ישנים תחילה",
         "recently-uploaded": "מסמכים שהועלו לאחרונה",
         "back-to-doc": "חזרה למסמך",
-        "add-doc-segment": "הוסף קטע",
+        "add-doc-segment": "הוסף כתבה",
         "page-num": "עמוד",
-        "doc-segment-description": "תיאור הקטע",
-        "select-segment-str": "בחרו קטע",
-        "create-segment-str": "צרו קטע חדש",
-        "no-segment-selected": "טרם נבחר קטע",
+        "doc-segment-description": "תיאור הכתבה",
+        "select-segment-str": "בחרו כתבה",
+        "create-segment-str": "צרו כתבה חדשה",
+        "no-segment-selected": "טרם נבחרה כתבה",
         "expand": "הגדל",
         "collapse": "הקטן",
         "page": "עמוד",
         "untitled": "ללא כותרת",
         "view-full-doc": "צפו במסמך המלא",
         "view-full-docs": "להצגת מסמכים שלמים",
-        "view-segments": "להצגת קטעי מסמכים"
+        "view-segments": "להצגת כתבות"
     },
     "terms": {
         "terms": "מונחים",
