--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -542,6 +542,7 @@
     },
     "docs": {
         "docs": "מסמכים",
+        "docsegs": "כתבות",
         "upload": "הוסף מסמכים",
         "upload-files": "העלאת מסמכים",
         "select-docs": "בחר מסמכים",
