--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -590,7 +590,8 @@
         "untitled": "Untitled",
         "view-full-doc": "View the full document",
         "view-full-docs": "View full docs",
-        "view-segments": "View segments"
+        "view-segments": "View segments",
+        "filter": "Enter document name or source"
     },
     "terms": {
         "terms": "Terms",
