--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -256,7 +256,7 @@
         "manage-users": "ניהול משתמשים",
         "can-edit": "הכנס למצב עריכה",
         "no-edit": "חזור לצפייה בלבד",
-        "upload-files": "העלאת תמונות",
+        "upload-files": "הוספת תמונות",
         "cant-send-email": "כתובת דואל לא תקינה",
         "wrong-password": "טעות בסיסמה",
         "user-not-registered": "טעות בהקלדה או שאינך רשום עדיין",
@@ -381,13 +381,13 @@
         "uploaded-by-users": "הועלו על ידי משתמשים",
         "uploaded-by-anyone": "תמונות ממקור כלשהו",
         "enter-date": "תאריך או שנה",
-        "upload-photos": "העלאת תמונות",
+        "upload-photos": "הוספת תמונות",
         "upload-in-progress": "...התמונות נשלחות לשרת",
         "photos-uploaded": " - תמונות שהועלו בהצלחה",
         "photos-duplicate": " - תמונות שכבר הועלו בעבר",
         "left": "נותרו",
         "failed": " - לא נקלטו במערכת",
-        "upload-files": "העלאת תמונות",
+        "upload-files": "הוספת תמונות",
         "select-photos": "בחר תמונות",
         "send": "שלח",
         "save": "שמור",
@@ -483,7 +483,7 @@
     "audios": {
         "audios": "הקלטות",
         "upload": "הוסף הקלטות",
-        "upload-files": "העלאת הקלטות",
+        "upload-files": "הוספת הקלטות",
         "select-audios": "בחר הקלטות",
         "save": "שלח",
         "cancel": "בטל",
@@ -544,7 +544,7 @@
         "docs": "מסמכים",
         "docsegs": "כתבות",
         "upload": "הוסף מסמכים",
-        "upload-files": "העלאת מסמכים",
+        "upload-files": "הוספת מסמכים",
         "select-docs": "בחר מסמכים",
         "matching-docs": "מסמכים שכוללים את המילים שנבחרו",
         "apply-to-selected": "תייג את המסמכים שנבחרו",
