--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -538,7 +538,8 @@
         "by-name": "לצפייה בסדר אלפביתי",
         "new-to-old": "סרטים חדשים קודם",
         "old-to-new": "סרטים ישנים קודם",
-        "recently-uploaded": "סרטים שהועלו לאחרונה"
+        "recently-uploaded": "סרטים שהועלו לאחרונה",
+        "enter-thumbnail": " הכנס את כתובת התמונה הממוזערת של"
     },
     "docs": {
         "docs": "מסמכים",
@@ -598,7 +599,8 @@
         "docs-filter": "הקלידו שם מסמך או שם המחבר",
         "doc-segments-filter": "הקלידו שם כתבה או שם המחבר",
         "doc-segments-search": "חיפוש מהיר ברשימת הכתבות",
-        "docs-search": "חיפוש מהיר ברשימת המסמכים"
+        "docs-search": "חיפוש מהיר ברשימת המסמכים",
+        "enter-thumbnail": " הכנס את כתובת התמונה הממוזערת של"
     },
     "terms": {
         "terms": "מונחים",
