--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -539,7 +539,8 @@
         "new-to-old": "סרטים חדשים קודם",
         "old-to-new": "סרטים ישנים קודם",
         "recently-uploaded": "סרטים שהועלו לאחרונה",
-        "enter-thumbnail": " הכנס את כתובת התמונה הממוזערת של"
+        "enter-thumbnail": " הכנס את כתובת התמונה הממוזערת של",
+        "select-thumbnail": "בחר תמונה מייצגת שונה"
     },
     "docs": {
         "docs": "מסמכים",
