--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -851,5 +851,6 @@
     "email": "דואר אלקטרוני",
     "message": "הודעה",
     "date": "תאריך",
-    "select-a-photo": "בחרו תמונה"
+    "select-a-photo": "בחרו תמונה",
+    "upload-the-photo": "העלו את התמונה החדשה"
 }
