--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -340,7 +340,7 @@
             "continue": "המשך",
             "share-on-facebook": "שתף בפייסבוק",
             "photo-link-copied": "כתובת התמונה הועתקה בהצלחה",
-            "replace-photo": "להצגת תמונה אחרת, צא מחלון זה, הקלק על התמונה הרצויה, הקלק על סמל השלשלת ואז חזור לכאן",
+            "replace-photo": "להצגת תמונה אחרת, צא מחלון זה, הקלק על התמונה הרצויה, הקלק על סמל השלשלת ואז חזור לכאן. <br>לשיתוף תמונה, היכנס לדף התמונה ולחץ על סמליל פייסבוק",
             "missing-photo": "לא נבחרה תמונה! צא ממסך זה, הקלק על התמונה הרצויה, הקלק על סמל השלשלת ואז חזור לכאן"
         }
     },
